Fixing the name of the thesis - prevent the words from hyphenation

--- a/text/tex/OpticalLocalization_BednarikJan.tex
+++ b/text/tex/OpticalLocalization_BednarikJan.tex
@@ -124,7 +124,7 @@
   date=\today,           %datum odevzdani
   %Nazev prace
   title.cs={Optická lokalizace velmi vzdálených cílů ve vícekamerovém systému},  %nazev prace v cestine ci slovenstine
-  title.en={Optical Localization of Very Distant Targets in Multicamera Systems}, %nazev prace v anglictine
+  title.en={Optical Localization of Very Distant\\Targets in Multicamera Systems}, %nazev prace v anglictine
   %Autor
   author={Jan Bednařík},   %cele jmeno a prijmeni autora
   author.name={Jan},   %jmeno autora (pro citaci)
